--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
     </header>
     <main>
       <section id="introduction">
-        <img
-          src="images/lyon_night.webp"
-          alt="image de lyon la nuit via fourviére"
-          loading="lazy"
-        />
+        <div id="annoyingImage">
+          <img
+            src="images/lyon_night.webp"
+            alt="image de lyon la nuit via fourviére"
+            loading="lazy"
+          />
+        </div>
         <div id="introductionText">
           <h2>La cuisine Lyonnaise</h2>
           <p>
@@ -158,8 +160,8 @@
             >
           </li>
         </ul>
-        <p>&copy; 2023 Cuisine Lyonnaise. Tous droits reservés.</p>
       </div>
+      <p>&copy; 2023 Cuisine Lyonnaise. Tous droits reservés.</p>
     </footer>
   </body>
 </html>
