changes to css link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <title>Cuisine Lyonnaise</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" type=“text/css” href="style.css" />
   </head>
   <body>
     <header>
