tentative correction bug css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       rel="stylesheet"
     />
     <title>Cuisine Lyonnaise</title>
-    <link rel="stylesheet" href="style.css" />
+    <base href="https://Soosuukee.github.io/maquette-integration/" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
